clean item package